force-app/main/default/objects/custom_create249__c/custom_create249__c.object-meta.xml
<CustomObject>
    <label>Custom created object249</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects249</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>