force-app/main/default/objects/custom_create249__c/fields/custom_create_249field511__c.field-meta.xml
<CustomField>
    <fullName>custom_create_249field511__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 249field511</label>
    <type>Checkbox</type>
</CustomField>